# nodespace-desktop-app

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPILATION_FIXES.md  CONFIGURATION.md  MVP_VALIDATION_REPORT.md  README.md  index.html  ollama_integration_status.md  package-lock.json  package.json  test_ai_integration.rs  verify_ollama_integration.py  vite.config.ts  vitest.config.ts
src/: App.css  App.test.tsx  App.tsx  setupTests.ts  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/sample.db/: 000028.sst  000031.sst  000036.sst  IDENTITY  LOG.old.1750824790133402  MANIFEST-000038  OPTIONS-000040
src-tauri/scripts/: validate.sh
src-tauri/src/: config.rs  error.rs  lib.rs  logging.rs  test_onnx.rs  tests.rs
src/components/: DateNavigationBar.css  DateNavigationBar.test.tsx  DateNavigationBar.tsx
src/hooks/: useTheme.ts
src/integration/: tauri-commands.test.ts
src/utils/: testing.test.ts  testing.ts
